Set up checking for game day
- after button click, app checks from data whether the current date matches any date of the games
- based on the result, different views are displayed
- configurations added to be able to import svgs as ReactComponent using vite-plugin-svgr

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,16 @@
   padding: 10px;
 }
 
+.App_resultGame {
+  width: 330px;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+
+.App_resultNoGame {
+}
+
 .App_ilvesLogo,
 .App_tapparaLogo {
   height: 110px;
@@ -38,4 +48,11 @@
 
 .App_findOutButton:hover {
   background-color: #7c7c7c7d;
+}
+
+.App_svg {
+  width: 200px;
+  height: 200px;
+  stroke: #fff;
+  fill: #fff;
 }
