--- a/src/App.css
+++ b/src/App.css
@@ -7,56 +7,15 @@
   text-align: center;
 }
 
+p {
+  font-size: 24px;
+  margin: 0;
+}
+
 .App_container {
   width: 330px;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 10px;
-}
-
-.App_mainContent {
-  width: 330px;
-  display: flex;
-  justify-content: center;
-  padding: 10px;
-}
-
-.App_resultGame {
-  width: 330px;
-  display: flex;
-  justify-content: center;
-  padding: 10px;
-}
-
-.App_resultNoGame {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 10px;
-}
-
-.App_ilvesLogo,
-.App_tapparaLogo {
-  height: 110px;
-  width: 110px;
-}
-
-.App_findOutButton {
-  border-radius: 50%;
-  height: 110px;
-  width: 110px;
-  padding: 5px;
-  font-size: 1rem;
-}
-
-.App_findOutButton:hover {
-  background-color: #7c7c7c7d;
-}
-
-.App_svg {
-  width: 100px;
-  height: 100px;
-  stroke: #fff;
-  fill: #fff;
 }
