add media queries
- images and icons where slightly made bigger for tablet and desktop view

--- a/src/components/ResultView.css
+++ b/src/components/ResultView.css
@@ -50,3 +50,14 @@
 .ResultView_backButton:active {
   text-decoration: none;
 }
+
+@media screen and (min-width: 481px) {
+  .ResultView_resultGame {
+    width: 500px;
+  }
+
+  .ResultView_svg {
+    width: 150px;
+    height: 150px;
+  }
+}
