Add option for querying other day than today
- date picker allows user to select specific day, to see whether there is a game on that day

--- a/src/components/StartView.css
+++ b/src/components/StartView.css
@@ -5,6 +5,15 @@
   padding: 10px;
 }
 
+.StartView_datePickerContainer {
+  display: flex;
+  gap: 10px;
+}
+
+.StartView_label {
+  font-size: 24px;
+}
+
 .StartView_ilvesLogo,
 .StartView_tapparaLogo {
   height: 110px;
