--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
   text-align: center;
 }
 
+h1 {
+  margin: 0;
+}
+
 p {
   font-size: 24px;
   margin: 0;
@@ -17,5 +21,6 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px;
+  padding: 20px 10px;
+  gap: 20px;
 }
